# voice-to-sign-language-translator

./: .gitignore  main.py  pyproject.toml
llm_prompts/: gloss_prompt.py
src/pipeline/: gloss_generation.py
