[project]
name = "voice-to-sign-language-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
    "transformers>=4.57.3",
]
